--- a/src/webui/_locales/en/messages.json
+++ b/src/webui/_locales/en/messages.json
@@ -129,14 +129,14 @@
   },
   "settings#disable-timeouts#heading": {
     "message": "Disable Timeouts for Slow Networks",
-    "description": "Settings section heading. If the user clicks this, the 'Disable Timeouts for Slow Networks' section will expand and can be edited. If 'disable timeouts' is enabled, psiphon will disable all network based timeouts, allowing very slow requests to eventually complete."
+    "description": "Settings section heading. If the user clicks this, the 'Disable Timeouts for Slow Networks' section will expand and can be edited. If 'disable timeouts' is enabled, network timeouts between the Psiphon client and server will be disabled."
   },
   "settings#disable-timeouts#help-text": {
-    "message": "If enabled, requests made via Psiphon will never timeout",
+    "message": "If enabled, communication with the Psiphon server will not time out",
     "description": "Text explaining to the user what the 'Disable Timeouts' setting does if enabled."
   },
   "settings#disable-timeouts#reason": {
-    "message": "Enabling this means that over very slow network connections, you are more likely to have your request succeed.",
+    "message": "When enabling this over a very slow network connection, you are less likely to experience unexpected disconnections.",
     "description": "Help text in the 'Disable Timeouts' settings section explaining to the user why they might want to modify (enable) the setting."
   },
   "settings#disable-timeouts#enable-label": {
@@ -288,7 +288,7 @@
     "description": "Label for the checkbox that allows the user to override the default 'upstream proxy' usage and totally disable the feature."
   },
   "settings#upstream-proxy#set-username-password-error-msg": {
-    "message": "You must set both Hostname and Port, or leave both blank for automatic selection.",
+    "message": "You must set both Username and Password, or leave both blank for proxies which do not require authentication.",
     "description": "Error message that is shown if the user enters a value for one of 'Username' or 'Password', but not for both -- this is not valid, as both are required. Alternatively, the user can leave both blank to use an upstream proxy which doesn't require authentication."
   },
   "settings#upstream-proxy#set-hostname-port-error-msg": {
