--- a/src/webui/_locales/en/messages.json
+++ b/src/webui/_locales/en/messages.json
@@ -489,8 +489,12 @@
     "description": "Appears in the notification area balloon periodically while Psiphon is connected to a server."
   },
   "appbackend#state-connected-reminder-body": {
-    "message": "Click to see fresh new content from Psiphon!",
-    "description": "Appears in the notification area balloon periodically while Psiphon is connected to a server. This is intended to encourage the user to click to see the sponsor's landing page. Note for right-to-left languages: You should not use an exclamation mark, as it won't be displayed correct if shown on a left-to-right operating system."
+    "message": "Keep Psiphon free. Click here to visit our sponsor pages!",
+    "description": "Appears in the notification area balloon periodically while Psiphon is connected to a server. This is intended to encourage the user to visit the sponsor's landing page. Note for right-to-left languages: You should not use an exclamation mark, as it won't be displayed correct if shown on a left-to-right operating system."
+  },
+  "appbackend#state-connected-reminder-body-2": {
+    "message": "Keep Psiphon free by visiting our sponsor pages!",
+    "description": "Appears in the notification area balloon periodically while Psiphon is connected to a server. This is intended to encourage the user to visit the sponsor's landing page. Note for right-to-left languages: You should not use an exclamation mark, as it won't be displayed correct if shown on a left-to-right operating system."
   },
   "appbackend#minimized-to-systray-title": {
     "message": "Psiphon has been minimized to the notification area",
