--- a/src/webui/_locales/locale-names.json
+++ b/src/webui/_locales/locale-names.json
@@ -25,7 +25,7 @@
   "ru": "Русский",
   "sv": "Svenska",
   "zh": "简体中文",
-  "uz@cyrillic": "Ўзбекча",
+  "uz@Cyrl": "Ўзбекча",
   "uz@Latn": "O'zbekcha",
   "tk": "Türkmençe",
   "th": "ภาษาไทย",
